--- a/loginform.css
+++ b/loginform.css
@@ -1,5 +1,9 @@
 body{
-    background-image: url("https://images.pexels.com/photos/531880/pexels-photo-531880.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
-    width: auto;
+    background-image: url("https://images.pexels.com/photos/4552175/pexels-photo-4552175.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    
+}
+.card{
+    /* background-color: rgb(222, 231, 226); */
+    background-image: url("https://images.pexels.com/photos/4552175/pexels-photo-4552175.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
 
 }
